manifests/dust-domain/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firebase-server
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: app
        image: gcr.io/stardust-156404/firebase-server:latest
        args:
        - node
        - src
        - --require-domains
        - gke.devmode.cloud
