manifests/dust-domain/frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firebase-server
spec:
  type: ClusterIP
  selector:
    app: firebase-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9239

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: firebase-server-fe
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/issuer: letsencrypt-prod
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - gke.devmode.cloud
    secretName: tls-devmode.cloud
  - hosts:
    - danopia.net
    - gke.danopia.net
    secretName: tls-danopia.net
  rules:
  - host: gke.devmode.cloud
    http: &http_rules
      paths:
      - path: /
        backend:
          serviceName: firebase-server
          servicePort: 80
  - host: danopia.net
    http: *http_rules
  - host: gke.danopia.net
    http: *http_rules
