manifests/dust-domain/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: firebase-server-fe
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "60"
    kubernetes.io/ingress.class: internet
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  tls:
  - hosts:
    - gke.devmode.cloud
    secretName: tls-devmode.cloud
  - hosts:
    - danopia.net
    - gke.danopia.net
    secretName: tls-danopia.net
  rules:

  - host: gke.devmode.cloud
    http: &http_rules
      paths:
      - path: /
        backend:
          serviceName: firebase-server
          servicePort: 80

  - host: danopia.net
    http: *http_rules
  - host: gke.danopia.net
    http: *http_rules
